--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /.vs/GoogleWebStorage/FileContentIndex/03a1ca2c-218e-4654-a1bd-8d53bc15301b.vsidx
+/.vs/GoogleWebStorage/FileContentIndex/04cf4659-72b3-49e7-99a4-3c31376a2b21.vsidx
