--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 
 /.vs/GoogleWebStorage/FileContentIndex/03a1ca2c-218e-4654-a1bd-8d53bc15301b.vsidx
 /.vs/GoogleWebStorage/FileContentIndex/04cf4659-72b3-49e7-99a4-3c31376a2b21.vsidx
+/.vs/GoogleWebStorage/FileContentIndex/c8db361f-e92e-439d-8664-c6043fabf0ad.vsidx
+/.vs/GoogleWebStorage/FileContentIndex/f0546e6a-8260-475f-8929-e9c5a134c73f.vsidx
